# Separador-de-Perguntas

question_extractor/: .gitignore  README.md  pyproject.toml  requirements.txt
question_extractor/question_extractor/cli/: main.py
question_extractor/question_extractor/domain/: extraction.py  persistence.py  reporting.py
question_extractor/question_extractor/infra/: db.py  files.py  settings.py
question_extractor/question_extractor/infra/migrations/: 001_init.sql
question_extractor/question_extractor/ooxml/: reader.py  scanner.py  segmenter.py
question_extractor/question_extractor/templates/: report.html.j2
