[project]
name = "question-extractor"
version = "0.1.0"
description = "DOCX Question Extractor Pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer[all]",
    "psycopg[binary,pool]",
    "pydantic-settings",
    "lxml",
    "jinja2",
    "structlog",
    "tenacity",
    "redis",
    "celery",
    "python-dotenv"
]

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["question_extractor"]
